# checkout/src/js/http/CorporatePassApi.ts
@@ -1,5 +1,6 @@
 import {HttpService} from "../common/services/HttpService";
 import {CorporatePass, GetCorporatePassRequest, MakeCorporatePassRequest} from "../model";
+import {CheckoutModelRequest} from "../model/checkout/CheckoutModelRequest";
 
 export class CorporatePassApi {
   constructor(private http: HttpService) {
@@ -10,6 +11,9 @@ export class CorporatePassApi {
   }
   isCorporatePassEnabled(): Promise<boolean> {
     return this.http.GET(`/isCorporatePassEnabled`);
+  }
+  isCorporatePassEnabledFor(checkoutModelRequest: CheckoutModelRequest): Promise<boolean> {
+    return this.http.POST(`/isCorporatePassEnabledFor`, checkoutModelRequest);
   }
   makeCorporatePass(request: MakeCorporatePassRequest): Promise<any> {
     return this.http.POST(`/makeCorporatePass`, request);
